src/objects/BEN_Category_CUC_Codes__c.object
<CustomObject>
    <description>This object is used to store CUC codes.</description>
    <fields>
        <fullName>Pkl_Market_Cluster__c</fullName>
        <label>Market Cluster</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMET &amp; RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dt_Month__c</fullName>
        <label>Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>lkp_Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>BEN_Category_Master__c</referenceTo>
        <relationshipLabel>Category CUC Codes</relationshipLabel>
        <relationshipName>Category_CUC_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pkl_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Cote D&apos;Ivoire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trinidad and Tobago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sweden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukraine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kazakhstan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zimbabwe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mozambique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicaragua</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_MCO__c</fullName>
        <label>MCO</label>
        <picklist>
            <picklistValues>
                <fullName>West Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK &amp; Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico &amp; Greater Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern Cone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TUI&amp;I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong,Korea &amp; Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia &amp; Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand &amp; MCLM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pkl_Super_Category__c</fullName>
        <label>Super Category</label>
        <picklist>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Care</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>txt_Attached_Spec_Code__c</fullName>
        <label>Attached_Spec_Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Brand__c</fullName>
        <label>Brand</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CPG_Code__c</fullName>
        <label>CPG Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_MRDR_Code_ECC__c</fullName>
        <label>MRDR Code (ECC)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txta_CPG_Description__c</fullName>
        <label>CPG Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_MRDR_Description__c</fullName>
        <label>MRDR Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>txta_Spec_Description__c</fullName>
        <label>Spec_Description</label>
        <type>TextArea</type>
    </fields>
    <label>CUC Codes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CUC Codes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category CUC Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>